Add new Maintainers

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -74,7 +74,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_url}}/git-novice" target="_blank" class="icon-github" title="Version Control with Git GitHub Repo"></a></td>
     <td><a href="{{site.github_io_url}}/git-novice/reference" target="_blank" class="icon-eye" title="Version Control with Git Refernce Guide"></a></td>
     <td><a href="{{site.github_io_url}}/git-novice/instructor/instructor-notes" target="_blank" class="icon-circle-with-plus" title="Version Control with Git Instructor Notes"></a></td>
-    <td>
+    <td>Erin Graham,
       <a href="https://carpentries.org/maintainers/#kekoziar">Katherine Koziar</a>, 
       Martino Sorbaro
     </td>
@@ -87,7 +87,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with Python Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/instructor/instructor-notes" target="_blank" class="icon-circle-with-plus" title="Programming with Python Instructor Notes"></a></td>
     <td>
-      Indraneel Chakraborty, Toan Phung
+      Indraneel Chakraborty, Toan Phung, Alberto Villagran
     </td>
   </tr>
 
