add new MATLAB lesson Maintainers

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -222,7 +222,8 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with MATLAB Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/instructor/instructor-notes" target="_blank" class="icon-circle-with-plus" title="Programming with MATLAB Instructor Notes"></a></td>
     <td>
-      We are looking for maintainers for this lesson. Please contact <a href="mailto:curriculum@carpentries.org">curriculum@carpentries.org</a> if you are interested.
+      Daniel Cummins,
+      Padem dhar Dwivedi
     </td>
   </tr>
 
