rm link to previous video lessons

--- a/pages/index.html
+++ b/pages/index.html
@@ -136,8 +136,7 @@ excerpt: Teaching researchers the foundational computing skills they need to get
   Greg Wilson left the University of Toronto in April 2010 to reboot Software Carpentry
   with support from nine sponsor organizations.
   Over the next year,
-  he recorded <a href="{{site.baseurl}}/lessons/previous/">120 short video lessons</a>
-  and ran half a dozen week-long classes for his backers.
+  he recorded 120 short video lessons and ran half a dozen week-long classes for his backers.
 </p>
 <p>
   This version of Software Carpentry was much more successful than its predecessors,
