--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,7 @@ excerpt: Teaching researchers the foundational computing skills they need to get
   Having started in 1998,
   Software Carpentry is now a lesson program within <a href="{{site.carpentries_url}}">The Carpentries</a>.
   Its focus is on the the computing skills researchers need to get more done in less time and with less pain,
-  and its <a href="{{site.carpentries_url}}/instructors/">volunteer instructors</a>
+  and its <a href="{{site.carpentries_url}}/instructors/">volunteer Instructors</a>
   have run thousands of events for almost one hundred thousand people since 2012.
   <em>Our target audience is researchers who have some prior programming experience<em>
   but who are largely self-taught
